chnaged the compiler version

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
+                    <version>2.3.2</version>
                 </configuration>
             </plugin>
             <plugin>
